# models/src/main/kotlin/ru/simohin/posusekam/models/entity/UserSettings.kt
@@ -1,0 +1,16 @@
+package ru.simohin.posusekam.models.entity
+
+import jakarta.persistence.*
+import java.util.UUID
+
+@Entity
+@Table(name = "user_settings")
+data class UserSettings(
+    @Id
+    @Column(name = "user_id")
+    val userId: UUID,
+
+    @Convert(converter = JsonMapConverter::class)
+    @Column(name = "settings", columnDefinition = "jsonb", nullable = false)
+    var settings: Map<String, Any> = emptyMap()
+)
